# html-translator

./: Cargo.toml  LICENSE  test-translated.html  test.html
dummyfolder/: test-2.html
src/: main.rs
testfolder/: test-inside-folder.html
