[package]
name = "html-translator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking","multipart","json"] }
serde = { version = "1.0.126", features = ["derive"] }
bytes = { version = "1", features = ["serde"] }
walkdir = "2"
confy = "0.4.0"